[package]
name = "rustis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = { version = "5.4.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
state = { version = "0.5", features = ["tls"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.6.18" }
tracing = "0.1.37"
clokwerk = "0.4.0"
